[gd_scene load_steps=5 format=3 uid="uid://6k7wjg68jucy"]

[ext_resource type="Script" path="res://src/MagicRune.gd" id="1_xvddk"]
[ext_resource type="Shader" path="res://RuneShader.gdshader" id="2_3lsbp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ykflk"]
render_priority = 0
shader = ExtResource("2_3lsbp")

[sub_resource type="SphereShape3D" id="SphereShape3D_61jwh"]

[node name="MagicRune" type="Node3D"]
script = ExtResource("1_xvddk")
mat = SubResource("ShaderMaterial_ykflk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="Area3D" type="Area3D" parent="."]

[node name="Placeholder" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_61jwh")

[connection signal="area_shape_entered" from="Area3D" to="." method="_on_area_3d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area3D" to="." method="_on_area_3d_area_shape_exited"]
